# src/main/resources/api.yml
@@ -90,15 +90,6 @@ components:
             items:
               $ref: './schemas/products.yml#/Products'
   securitySchemes:
-    petstore_auth:
-      type: oauth2
-      flows:
-        implicit:
-          authorizationUrl: https://petstore3.swagger.io/oauth/authorize
-          scopes:
-            write:pets: modify pets in your account
-            read:pets: read your pets
-    api_key:
-      type: apiKey
-      name: api_key
-      in: header
+    basicAuth:
+      type: http
+      scheme: basic
